rex (0.3.99.4) unstable; urgency=low
  * fixed user/password auth for changing user credentials
  * use $ENV{"USER"} as default login

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 26 Apr 2011 13:00:00 +0200

rex (0.3.99.3) unstable; urgency=low
  * Build dependencies between tasks
  * Added sysctl command
  * chmod, chgrp and chown for installing a file
  * added database support

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 15 Apr 2011 23:40:00 +0200

rex (0.3.99.2) unstable; urgency=low
  * rsync timeout problem fixed

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 14 Apr 2011 14:20:00 +0200

rex (0.3.99.1) unstable; urgency=low
  * symlink function
  * install non-template files

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 11 Apr 2011 19:30:00 +0200


rex (0.3.99) unstable; urgency=low
  * use -H cli parameter to overwrite hosts or groups for a task
  * added md5 function
  * added functions to manage services (start/stop/status)
  * install package support for yum, apt and zypper
  * remove package support for yum, apt and zypper
  * added support to install a specific version of a package
  * added template support
  * Started Hardware and Information gathering
  * prepare for 0.4.0

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 07 Apr 2011 15:00:00 +0200


rex (0.3.2) unstable; urgency=low
  * Removed registering tasks as subs in main:: package.
  * Fixed rsync timeout bug.
  * Fixed bug if no description was set.
  * prepare for 0.3.2

 -- Jan Gehring <jan.gehring@gmail.com>  Tue, 05 Apr 2011 20:45:00 +0200

rex (0.3.1) unstable; urgency=low
  * started some documentation for rex. after install just "man rex"
  * fixed bug with command line -e and password auth
  * fixed logging output (typo)
  * prepare for 0.3.1

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 28 Mar 2011 19:30:00 +0200

rex (0.3.0) unstable; urgency=low
  * added rexify command
  * added simple rsync support
  * run commands directly from command line